<resources>
    <string name="app_name">Scavenger</string>
    <string name="challenge_image_description">Image showing task type</string>
    <string name="imagePrompt">Take a picture of…</string>
    <string name="videoPrompt">Take a video of…</string>
    <string name="audioPrompt">Record audio of…</string>
    <string name="locationPrompt">Go to…</string>
    <string name="challenge_description_hint">Enter a description…</string>
    <string name="microphone_icon_description">Microphone icon</string>
    <string name="record_button">Record Button</string>
    <string name="pause_button">Pause Button</string>
    <string name="save_button">Save Button</string>
    <string name="user_image">User Image</string>
    <string name="confirm_button">Confirm Button</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            Using this feature, user can record video to complete video task for the Scavenger hunt challenge.


        ]]>
</string>
</resources>
