<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verify_location_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.dal.cs.scavenger.VerifyLocationTask">

    <TextView
        android:text="@string/locationPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="30sp"
        android:id="@+id/promptText" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/promptText"
        android:textSize="20sp"
        android:gravity="top"
        android:lines="2"/>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/description"
        android:layout_above="@id/buttonLayout"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >

        <ImageButton
            android:id="@+id/acceptButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/record_button"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center"
            android:onClick="accept" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_margin="20dp"
            />

        <ImageButton
            android:id="@+id/denyButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/save_button"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center"
            android:onClick="deny" />

    </LinearLayout>

</RelativeLayout>
